src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;900&display=swap');

body {
  margin: 0;
  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  color: #fff;
  background: #FF7040;
  font-size: 25px;
  font-weight: 300;
  letter-spacing: -2px;
  line-height: 1;
}

#root {
  background: linear-gradient(to bottom right, #FF914D, #FF0000);
  background-size: cover;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  padding-top: 4rem;
  perspective: 1440px;
}

*::selection {
  background-color: #000;
}

.text {
  transform: translate3d(2rem,-3rem,2rem) rotateY(15deg);
  transform-origin: left;
}

h1 {
  font-size: 100px;
  font-weight: 900;
  letter-spacing: -4px;
  line-height: 0.8;
}

@media screen and (min-width: 768px) {
  h1 {
    font-size: 100px;
    font-weight: 900;
    letter-spacing: -4px;
    line-height: 0.3;
  }

  body {
    line-height: 0.3;
  }

  .text {
    transform: translate3d(4rem,0,2rem) rotateY(15deg);
  }
}

.nav {
  margin-top: 5rem;
}

.nav ul {
  list-style-type: none;
  perspective: 100px;
}

a[href] {
  color: #fff;
  text-decoration-color: #fff;
  letter-spacing: -1px;
  font-weight: 500;
  transition: all .1s cubic-bezier(0,1,1,1);
}

a[href]:hover,
a[href]:focus,
a[href]:active {
  color: #000;
  text-decoration-color: #000;
}

.nav a[href] {
  font-size: 30px;
  line-height: 1.25;
  text-decoration: none;
  border-left: 8px solid #fff;
  margin-left: -2.25rem;
  padding-left: 2.25rem;
}

.nav a[href]:hover,
.nav a[href]:focus,
.nav a[href]:active {
  border-left: 16px solid #000;
}


img {
  position: absolute;
  z-index: -999;
  bottom: 0;
  left: 0;
  width: 100vw;
}

img::selection {
  background-color: transparent;
}

.threed {
  position: absolute;
  z-index: -1;
  top: 0;
  left: 50%;
  transform: translateX(-50%) scale(0.5);
  mix-blend-mode: color-burn;
}

@media screen and (min-width: 768px) {
  .threed {
    position: absolute;
    z-index: -1;
    top: 0;
    right: 35vw;
    mix-blend-mode: color-burn;
    transform: scale(1);
  }
}

.threecon {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.static {
  opacity: 0.5;
  position: absolute;
  top: -1em;
  left: -1em;
  height: 200vh;
  width: 800vw;
  background-image: url(./static.png);
  background-repeat: repeat;
  mix-blend-mode: multiply;
  z-index: -10;

  -webkit-animation: rainbow 0.5s linear infinite alternate;
  -z-animation: rainbow 0.5s linear infinite alternate;
  -o-animation: rainbow 0.5s linear infinite alternate;
  animation: rainbow 0.5s linear infinite alternate;
}

@-webkit-keyframes rainbow {
  0%{background-position:0% 82%}
  50%{background-position:100% 19%}
  100%{background-position:0% 82%}
}

@-moz-keyframes rainbow {
  0%{background-position:0% 82%}
  50%{background-position:100% 19%}
  100%{background-position:0% 82%}
}

@-o-keyframes rainbow {
  0%{background-position:0% 82%}
  50%{background-position:100% 19%}
  100%{background-position:0% 82%}
}

@keyframes rainbow {
  0%{background-position:0% 82%}
  50%{background-position:100% 19%}
  100%{background-position:0% 82%}
}

